# cppsandbox

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  helloworld
HelloWorld/: CMakeCache.txt  CMakeLists.txt  HelloWorld  Makefile  build.sh  cmake_install.cmake
HelloWorld/src/: Main.cpp  a.out  log.cpp
